AppInmobiliaria/force-app/main/default/objects/Listing_Lead__c/Listing_Lead__c.object-meta.xml
<CustomObject>
    <label>Listing Lead</label>
    <nameField>
        <displayFormat>LL-{00000}</displayFormat>
        <label>Listing Lead Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listing Leads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>