AppInmobiliaria/force-app/main/default/objects/Listing_Lead__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conserje</fullName>
            </value>
            <value>
                <fullName>Cartel Balcón</fullName>
            </value>
            <value>
                <fullName>Puerta a puerta</fullName>
            </value>
            <value>
                <fullName>Revista/Internet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>