AppInmobiliaria/force-app/main/default/objects/Listing_Lead__c/fields/Target_Property_Unit__c.field-meta.xml
<CustomField>
    <fullName>Target_Property_Unit__c</fullName>
    <label>Target Property Unit</label>
    <referenceTo>Property_Unit__c</referenceTo>
    <relationshipName>Noticias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>