AppInmobiliaria/force-app/main/default/objects/Listing_Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Target_Property_Unit__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Converted_Opportunity__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>